# Python-VTS2H5

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vts2h5/: __init__.py  cli.py  converter.py  reader.py  writer.py  xdmf.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_converter.py  test_reader.py  test_writer.py  test_xdmf.py
