[project]
name = "vts2h5"
version = "0.2.0"
description = "Convert VTK Structured Grid (VTS) files to HDF5 with XDMF2 descriptors"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["vtk", "hdf5", "xdmf", "conversion", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "vtk>=9.3.0",
    "h5py>=3.10.0",
    "numpy>=1.24.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
vts2h5 = "vts2h5.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vts2h5"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
